@@ -571,7 +571,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © Michal Josef Špaček 2021-2024
+    © Michal Josef Špaček 2021-2025
 
     BSD 2-Clause License
 
