@@ -1,4 +1,5 @@
 0.10
+ - Update copyright years.
 
 0.09 2024-11-25T17:22:53+01:00
  - API change: Add 'issn' parameter to Series.
